--- a/experience.html
+++ b/experience.html
@@ -24,10 +24,13 @@
       <div class="card">
         <h2>As a Homo sapien</h2>
         <h3>Generative computation</h3>
-        <ul class="experience"></ul>
+        <ul class="experience">
             <li>Are these words you're reading on your screen formed from my mind enough proof?</li>
+        </ul>
         <h3>Abstract thought</h3>
+        <ul class="experience">
             <li>Why do you wear a shirt (singular), and put on a pair of pants (plural)?</li>
+        </ul>
       </div> 
 
       <div class="card">
@@ -43,8 +46,7 @@
     </main>
     <footer>
       <ul>
-        <li><a href="" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/duckduckmoose94" class="social twitter">Twitter</a></li>
       </ul>
       <p class="copyright">Copyright 2019, Stephen Duckworth</p>
     </footer>
