--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/ARTWSOK EDTP.jpg" alt="Baby Picture of Stephen Duckworth" class="profile-image">
+      <img src="images/baby.jpg" alt="Baby Picture of Stephen Duckworth" class="profile-image">
       <h1 class="tag name">Hello, I’m Stephen Duckworth.</h1>
       <p class="tag location">Born and raised in Louisville, Kentucky.</p>
     </header>
@@ -31,7 +31,7 @@
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to learn how to code and get a job in the Front End Development field. When I am done with this course I would like to be fluent in these languages: </p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -39,14 +39,13 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work for a web design firm to help clients with their presence online.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
         <li><a href="https://twitter.com/duckduckmoose94" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2019, Stephen Duckworth</p>
     </footer>
